Modification in Home.html file

--- a/Home.html
+++ b/Home.html
@@ -29,7 +29,7 @@
      <a href="#">Home</a>
      <a href="#">Subject</a>
      <a href="#">Contact</a>
-     <a href="#">Return</a>
+     <a href="#">About us</a>
     </nav>
 </body>
 </html>
