Adding some css in form.html file and add style.css file

--- a/button_links.html
+++ b/button_links.html
@@ -51,7 +51,7 @@
         <h3>Buttons and Links:</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione quaerat harum dignissimos impedit. Numquam distinctio quod debitis omnis voluptatum repellat molestiae blanditiis officiis tempora eius in quas, illo alias vel fugiat ab, iusto impedit.</p>
         <a class="btn" href="https://www.google.com">read more</a>
-        <button class="btn">contact us</button>
+        <button class="btn"><a href="https://www.facebook.com">contact us</a></button>
     </div>
 </body>
 </html>
