--- a/Project1.html
+++ b/Project1.html
@@ -16,6 +16,16 @@
       <a href="#">Portfolio</a>
       <a href="#">Contact Us</a>
     </nav>
-  </header>
+   </header>
+   <section class="bgimage" id="home">
+    <div class="container-fluid">
+        <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
+            <h2 class="hero_title">Hi, it's me Ashutosh</h2>
+            <p class="hero_desc">I am a fresher front-end developer in mumbai city</p>
+        </div>
+        </div>
+    </div>
+</section>
 </body>
 </html>
