--- a/flex.html
+++ b/flex.html
@@ -15,7 +15,7 @@
         border: 2px solid rgb(235, 6, 6);
         /* float: left; */
         order: 4;
-        align-self: flex-end;
+        /* align-self: flex-end; */
         /*flex-grow: 1; */
     }
 
@@ -42,11 +42,11 @@
            flex-wrap: wrap; 
         /* flex-wrap: wrap-reverse; */
         justify-content:flex-start;
-        /*justify-content: center;
-        justify-content: flex-start;
+        justify-content: center;
+        /*justify-content: flex-start;
         justify-content:space-between; */
-        align-items: center;
-        /*align-content: center; */
+        /* align-items: center; */
+        align-content: center;
 
 
     }
@@ -55,9 +55,9 @@
 <body>
     <div class="container">
         <div class="box1">Box1</div>
-        <div class="box2">Box2</div>
+        <!-- <div class="box2">Box2</div>
         <div class="box2">Box3</div>
-        <div class="box2">Box4</div>
+        <div class="box2">Box4</div> -->
     </div>
 
 </body>
