adding buttons instead of div and modified this calculator

--- a/calculater.html
+++ b/calculater.html
@@ -24,7 +24,8 @@
             height: 500px;
             width: 280px;
             border-radius: 10px;
-            padding: 5px;
+            padding: 8px;
+            margin: 80px;
         }
 
         .calc1 {
@@ -36,21 +37,35 @@
         .b1 {
             background-color: rgb(135, 126, 126);
             border-radius: 10px;
-            height: 30px;
+            height: 44px;
             width: 68px;
             margin: 2px;
-            padding: 8px 0px 0px 0px;
+            padding: 2px;
             text-align: center;
         }
 
         .b2 {
             background-color: rgb(135, 126, 126);
             border-radius: 10px;
-            height: 39px;
+            height: 52px;
             width: 68px;
             margin: 2px;
             padding: 15px 0px 0px 0px;
             text-align: center;
+            padding: 2px;
+            border-color: black;
+        }
+        .cl:hover{
+            background-color: #f5f5f3;;
+        }
+        .cl{
+            background-color:  #ffa906;
+        }
+        .cl2{
+            background-color: aliceblue;
+        }
+        .cl2:hover{
+            background-color: rgb(135, 126, 126);
         }
 
         sup {
@@ -64,48 +79,49 @@
     <div class="container">
         <div class="calc">
             <div class="calc1">
+          
             </div>
             <div class="button">
-                <div class="b1">mc</div>
-                <div class="b1">mr</div>
-                <div class="b1">m-</div>
-                <div class="b1">m+</div>
+                <button class="b1">mc</button>
+                <button class="b1">mr</button>
+                <button class="b1">m+</button>
+                <button class="b1">m-</button>
             </div>
             <div class="button">
-                <div class="b2">AC</div>
-                <div class="b2">&radic;x</div>
-                <div class="b2">%</div>
-                <div class="b2">/</div>
+                <button class="b2">AC</button>
+                <button class="b2">&radic;x</button>
+                <button class="b2">%</button>
+                <button class="b2 cl">÷</button>
             </div>
             <div class="button">
-                <div class="b2">7</div>
-                <div class="b2">8</div>
-                <div class="b2">9</div>
-                <div class="b2">*</div>
+                <button  class="b2 cl2">7</butbutton>
+                <button class="b2 cl2">8</butbutton>
+                <button class="b2 cl2">9</butbutton>
+                <button class="b2 cl">*</butbutton>
+            </div> 
+            <div class="button">
+                <button class="b2 cl2">4</button>
+                <button class="b2 cl2">5</button>
+                <button class="b2 cl2">6</button>
+                <button class="b2 cl">-</button>
             </div>
             <div class="button">
-                <div class="b2">4</div>
-                <div class="b2">5</div>
-                <div class="b2">6</div>
-                <div class="b2">-</div>
+                <button class="b2 cl2">1</button>
+                <button class="b2 cl2">2</button>
+                <button class="b2 cl2">3</button>
+                <button class="b2 cl">+</button>
             </div>
             <div class="button">
-                <div class="b2">1</div>
-                <div class="b2">2</div>
-                <div class="b2">3</div>
-                <div class="b2">+</div>
+                <button class="b2 cl2">0</button>
+                <button class="b2 cl2">.</button>
+                <button class="b2 cl2">+/-</button>
+                <button class="b2 cl">=</button>
             </div>
             <div class="button">
-                <div class="b2">0</div>
-                <div class="b2">.</div>
-                <div class="b2">+/-</div>
-                <div class="b2">=</div>
-            </div>
-            <div class="button">
-                <div class="b2">&pi;</div>
-                <div class="b2">X<sup>y</sup></div>
-                <div class="b2">R2</div>
-                <div class="b2">R0</div>
+                <button class="b2">&pi;</button>
+                <button class="b2">X<sup>y</sup></button>
+                <button class="b2">R2</button>
+                <button class="b2">R0</button>
             </div>
 
 
