--- a/calculator2.html
+++ b/calculator2.html
@@ -9,9 +9,37 @@
 <body>
    <div class="container">
       <div class="calc">
-        <div class="calc2">
+        <div class="calc1">
         </div>
-       
+        <div class="button">
+         <table>
+            <tr>
+               <td >mc</td>
+            </tr>
+         </table>
+        </div>
+        <div class="button">
+         <table>
+            <tr>
+               <td>mc</td>
+            </tr>
+         </table>
+        </div>
+        <div class="button">
+         <table>
+            <tr>
+               <td>mc</td>
+            </tr>
+         </table>
+        </div>
+        <div class="button">
+         <table>
+            <tr>
+               <td>mc</td>
+            </tr>
+         </table>
+        </div>
+        
       </div>
    </div> 
 </body>
