adding input elements as text

--- a/calculater.html
+++ b/calculater.html
@@ -29,9 +29,10 @@
         }
 
         .calc1 {
-            background-color:white;
-            margin: 7px;
-            height: 75px;
+            background-color: white;
+           margin: 7px;
+           height: 77px;
+           width: 257px;
         }
 
         .b1 {
@@ -78,9 +79,7 @@
 <body>
     <div class="container">
         <div class="calc">
-            <div class="calc1">
-          
-            </div>
+            <input type=" text" class="calc1">
             <div class="button">
                 <button class="b1">mc</button>
                 <button class="b1">mr</button>
